--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
-title: Sankalp's homepage
-description: Bookmark this to keep an eye on my updates!
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: ~
+description: Sankalp Shere's homepage
